Fix maint request status badges sizing
Overlapping on smaller screeens

--- a/static/scss/0_helpers/_utilities.scss
+++ b/static/scss/0_helpers/_utilities.scss
@@ -42,6 +42,13 @@
     line-height: 1;
 }
 
+.badge-md{
+    padding: .5em 1em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+}
+
 .badge-success{
     color: #0d5610;
     background: rgba(76, 175, 80, 0.3);
